# RebornLauncher

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md  RebornLauncher.sln  build_cryptoloader_vs2022_x86.bat  build_vs2015.bat  build_vs2022.bat  vcpkg.json
CryptoLoader/: CMakeLists.txt  FileManager.h  dllmain.cpp
CryptoLoader/docs/agent-meta/: ai-mistake-log.md  hot-files-index.md
CryptoLoader/docs/ai-summaries/: 2026-03-02-2054-handlehookedfilecheck-sync-only.md
GenerateUpdateInformation/: CMakeLists.txt  DownloadCtrl.cpp  DownloadCtrl.h  FileHash.cpp  FileHash.h  FileSystem.cpp  FileSystem.h  GenerateUpdateInformation.cpp  GenerateUpdateInformation.h  VersionConfig.h
RebornLauncher/: Archive.cpp  CMakeLists.txt  ChunkDownload.cpp  ChunkExecutor.cpp  ChunkExecutor.h  ChunkState.cpp  ChunkState.h  ClientState.cpp  Crypto.cpp  DownloadResume.cpp  Encoding.h  FileHash.cpp  FileHash.h  FileSystem.cpp  FileSystem.h  Frame.cpp  Frame.h  GameInfo.h  HttpSession.cpp  LauncherMainDlg.cpp  LauncherMainDlg.h  LauncherP2PConfig.cpp  LauncherP2PConfig.h  LauncherP2PController.cpp  LauncherP2PController.h  LauncherSplashRenderer.cpp  LauncherSplashRenderer.h  LauncherUpdateCoordinator.cpp  LauncherUpdateCoordinator.h  LocalVersionLoader.cpp  LocalVersionLoader.h  Logging.cpp  Manifest.cpp  Mapping.cpp  NetUtils.cpp  NetUtils.h  P2PClient.cpp  P2PClient.h  RebornLauncher.aps  RebornLauncher.cpp  (+50 more)
UpdateForge/: CMakeLists.txt  FileHash.cpp  FileHash.h  FileSystem.cpp  FileSystem.h  UpdateForge.cpp  UpdateForge.h  VersionConfig.h  framework.h  targetver.h
docs/: bootstrap-config-json-spec.md  java-signaling-service-spec.md  optimization-backlog.md
docs/agent-meta/: ai-mistake-log.md  hot-files-index.md
docs/ai-summaries/: 2026-02-04.md  2026-02-06.md  2026-02-07.md  2026-02-08-124350-p2p-window-fix.md  2026-02-08-130753-animated-splash-fix.md  2026-02-08-134812-transparent-pig-overlay.md  2026-02-08-135834-percent-head-and-local-stun.md  2026-02-08-144007-bootstrap-json-refactor.md  2026-02-08-145052-encoding-mojibake-fix.md  2026-02-08-153426-updateforge-json-encrypt-decrypt-ui.md  2026-02-08-183958-rebornlauncher-7z-null-path-crash-fix.md  2026-02-08-184536-base-package-download-complete-check.md  2026-02-08-185733-base-package-chunk-resume-and-extract-root.md  2026-02-08-190542-extract-root-by-exe-layer.md  2026-02-08-192407-remove-maplereborn-7z-hardcode.md  2026-02-10-1146-versiondat-empty-body-fix.md  2026-02-10-115646-versiondat-format-compat.md  2026-02-10-1219-versiondat-plain-json-only.md  2026-02-10-1227-revert-updateforge-plain-json-change.md  2026-02-10-1231-versiondat-zstd-dict-output.md  2026-02-10-1540-detours-include-fix.md  2026-02-10-1542-versiondat-page-utf8-symmetry-fix.md  2026-02-10-1549-encrypt-checkbox-persist-and-key-lock.md  2026-02-10-1848-cryptoloader-build-check.md  2026-02-10-1920-hook-5081a080.md  2026-02-10-2019-workthread-function-comments.md  2026-02-10-2031-run-function-chinese-comments.md  2026-02-10-2033-refresh-remote-version-manifest-comments.md  2026-02-10-214337-launcher-single-instance-gameinfos.md  2026-02-11-092432-cryptoloader-x86-build.md  2026-02-11-111848-cryptoloader-hook-md5-mapping.md  2026-02-11-113822-cryptoloader-x86-only.md  2026-02-11-1652-launcher-multi-pig-overlay.md  2026-02-11-1712-pig-overlay-tuning.md  2026-02-11-1722-download-pig-progress-fix.md  2026-02-11-1729-pid-source-correction.md  2026-02-11-230913-rebornlauncher-resource-id-frames.md  2026-02-11-233509-path-check.md  2026-02-12-143422-rebornlauncher-wmain-hardening.md  2026-02-12-1548-pig-idle-topmost.md  (+96 more)
